--- a/spark/build.gradle
+++ b/spark/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
     compile 'commons-cli:commons-cli:1.3'
 
+    compile 'com.google.code.gson:gson:2.8.0'
 }
 
 task sparkServer(type: JavaExec) {
