--- a/spark/build.gradle
+++ b/spark/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
     compile 'com.sparkjava:spark-core:2.5.4'
 
+    compile project(':common')
+
     compile 'commons-cli:commons-cli:1.3'
 
     compile 'com.google.code.gson:gson:2.8.0'
