Added means of simulating a CPU load for a given time period.

--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,13 @@ plugins {
 }
 
 allprojects {
-
     repositories {
 	mavenCentral()
     }
+}
 
-
+subprojects {
+    repositories {
+	mavenCentral()
+    }
 }
